[package]
name = "rucksacc"
version = "0.1.0"
edition = "2021"
authors = ["Liem Dam-Quang <liem.daq@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1", features = ["derive"] }
ariadne = "0.1.5"
inkwell = {version = "0.1.0-beta.4", features = ["llvm13-0"]}
cranelift = "0.83.0"
rand = "0.8.5"
lazy_static = "1.4"